--- a/index.html
+++ b/index.html
@@ -3,9 +3,66 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Projects</title>
+  <title>Resume</title>
+  <link rel="stylesheet" type="text/css" href="Resume.css">
 </head>
 <body>
+<div class="row">
+<button class="test">
+HomePage
+
+</button>
+<button class="test">
+Resume
+
+</button>
+<button class="test">
+Projects
+
+</button>
+<button class="test">
+Contact
+
+</button>
+</div>
+<p></p>
+
+<div class="languages">
+<p style="">Languages:</p>
+<p style="margin-left: 10%">
+Java<br />
+C<br />
+Assembly(ARM)<br />
+C#<br />
+Prolog<br />
+HTML<br />
+CSS<br />
+Javascript<br />
+</p>
+<p></p>
+
+</div>
+
+<p></p>
+<div class="languages">
+<p>
+Frameworks:
+</p>
+<p style="margin-left: 10%">
+Ionic (HTML/CSS/Typescript)
+</p>
+</div>
+<p></p>
+<div class="languages">
+<p>
+Character:
+</p>
+<p style="margin-left: 10%">
+
+</p>
+</div>
+
+
 
 </body>
 </html>
