--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>🤔 hmmm</title>
+  <title>🤔</title>
   <link rel="stylesheet" type="text/css" href="Resume.css">
 </head>
 <body>
