--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Paul Fussell</span>
+        <span class="d-block d-lg-none">Hello Mobile Users</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -44,25 +44,25 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Education</a>
+            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">School Projects</a>
+            <a class="nav-link js-scroll-trigger" href="#projects">School Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Graphic Design</a>
+            <a class="nav-link js-scroll-trigger" href="#design">Graphic Design</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">My Tools</a>
+            <a class="nav-link js-scroll-trigger" href="#tools">My Tools</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#awards">My Websites</a>
+              <a class="nav-link js-scroll-trigger" href="#sites">My Websites</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#awards">Other</a>
+              <a class="nav-link js-scroll-trigger" href="#other">Other</a>
           </li>
         </ul>
       </div>
@@ -75,8 +75,9 @@
           <h1 class="mb-0">Paul
             <span class="text-primary">Fussell</span>
           </h1>
-          <div class="subheading mb-5">Sherman Oaks, California · (818) 644-0748 ·
+          <div class="subheading mb-5">Sherman Oaks, California<br> · (818) 644-0748 · <br>
             <a href="mailto:paulwilliamfussell@gmail.com">paulwilliamfussell@gmail.com</a>
+            <a href="/Resume.pdf">test</a>
           </div>
           <p class="lead mb-5">test</p>
           <div class="social-icons">
@@ -280,7 +281,7 @@
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+      <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
@@ -312,7 +313,7 @@
               Place - James Buchanan High School - Hackathon 2005</li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
     </div>
 
