--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <span class="text-primary">Fussell</span>
           </h1>
           <div class="subheading mb-5">Sherman Oaks, California<br> · (818) 644-0748 · <br>
-            <a href="mailto:paulwilliamfussell@gmail.com">paulwilliamfussell@gmail.com</a>
-            <a href="/Resume.pdf">test</a>
+            <a href="mailto:paulwilliamfussell@gmail.com" target="_blank">paulwilliamfussell@gmail.com</a> <br>
+            <a href="/Resume.pdf">My Resume</a>
           </div>
           <p class="lead mb-5">test</p>
           <div class="social-icons">
