--- a/index.html
+++ b/index.html
@@ -70,34 +70,52 @@
 
     <div class="container-fluid p-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Paul
             <span class="text-primary">Fussell</span>
           </h1>
           <div class="subheading mb-5">Sherman Oaks, California<br> · (818) 644-0748 · <br>
-            <a href="mailto:paulwilliamfussell@gmail.com" target="_blank">paulwilliamfussell@gmail.com</a> <br>
-            <a href="/Resume.pdf">My Resume</a>
+            <a href="mailto:paulwilliamfussell@gmail.com">paulwilliamfussell@gmail.com</a>
           </div>
-          <p class="lead mb-5">test</p>
-          <div class="social-icons">
-            <a href="#">
-              <i class="fab fa-linkedin-in"></i>
-              LinkedIn
-            </a>
-            <a href="#">
-              <i class="fab fa-github"></i>
-            </a>
-            <p>GitHub</p>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-              Youtube
-            </a>
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
-              Resume
-            </a>
-          </div>
+             <div class="row social-icons">
+                <div class="col">
+                  <a href="https://www.linkedin.com/in/paul-fussell-5b9346164/" target="_blank">
+                    <i class="fab fa-linkedin-in"></i>
+                  </a>
+                </div>
+                <div class="col">
+                  <a href="https://github.com/paulfussell" target="_blank">
+                    <i class="fab fa-github"></i>
+                  </a>
+                </div>
+                <div class="col">
+                  <a href="https://www.youtube.com/channel/UConw592CJpgEFFolKNy6_pA" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </div>
+                <div class="col">
+                  <a href="/Resume.pdf" target="_blank">
+                    <i class="far fa-file"></i>
+                  </a>
+                </div>
+
+              </div>
+              <div class="row">
+                  <div class="col">
+                    <p>LinkedIn</p>
+                  </div>
+                  <div class="col">
+                    <p>GitHub</p>
+                  </div>
+                  <div class="col">
+                    <p>Youtube</p>
+                  </div>
+                  <div class="col">
+                      <p>Resume</p>
+                  </div>
+                </div>
+
         </div>
       </section>
 
