--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
       </section>
 
-      <hr class="m-0">
+      <!-- <hr class="m-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
@@ -171,13 +171,15 @@
 
         </div>
 
-      </section>
+      </section> -->
 
       <hr class="m-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+
+
+          <!-- <h2 class="mb-5">Education</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -189,7 +191,24 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">2018</span>
             </div>
+          </div> -->
+
+
+          <h2 class="mb-5">Education</h2>
+
+          <div class="resume-item row">
+            <div class="col"></div>
+            <div class="resume-content col">
+              <h3 class="mb-0">California State University Northridge</h3>
+              <div class="subheading mb-3">Bachelor of Science</div>
+              <div>Computer Science</div>
+              <p>GPA: 3.10</p>
+            </div>
+            <div class="resume-date text-md-right col">
+              <span class="text-primary">2018</span>
+            </div>
           </div>
+
 
           <!-- <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
@@ -206,17 +225,16 @@
 
         <div class="container">
             <div class="row">
+                <div class="col">
+                    
+                </div>
               <div class="col">
-                  <img class="img-fluid img-profile rounded-circle mb-5" src="img/grad1.png" alt="">
+                  <img class="img-fluid img-profile rounded-square mb-5" src="img/grad1.png" alt="">
               </div>
               <div class="col">
-
+                  <img class="img-fluid img-profile rounded-square mb-5" src="img/grad2.png" alt="">
               </div>
               <div class="col">
-                  <img class="img-fluid img-profile rounded-circle mb-5" src="img/grad2.png" alt="">
-              </div>
-              <div class="col">
-
               </div>
             </div>
         </div>
