adding rhythm runner

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <span class="text-primary">Fussell</span>
           </h1>
           <div class="subheading mb-5">Sherman Oaks, California<br> · (818) 644-0748 · <br>
-            <a href="mailto:paulwilliamfussell@gmail.com">paulwilliamfussell@gmail.com</a>
+            <a href="mailto:paulwilliamfussell@gmail.com">paulwilliamfussell@gmail.com</a><br>
+            <a href="/rhythmrunner.html" target="_blank">Rhythm Runner</a>
           </div>
              <div class="row social-icons">
                 <div class="col">
