--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
           <div class="resume-item row">
             <div class="col"></div>
-            <div class="resume-content col">
+            <div class="resume-content col-6">
               <h3 class="mb-0">California State University Northridge</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
               <div>Computer Science</div>
@@ -229,10 +229,10 @@
                 <div class="col">
                     
                 </div>
-              <div class="col">
+              <div class="col-4">
                   <img class="img-fluid img-profile rounded-square mb-5" src="img/grad1.png" alt="">
               </div>
-              <div class="col">
+              <div class="col-4">
                   <img class="img-fluid img-profile rounded-square mb-5" src="img/grad2.png" alt="">
               </div>
               <div class="col">
