--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
               <div class="col-4">
                   <img class="img-fluid img-profile rounded-square mb-5" src="img/grad2.png" alt="">
               </div>
-              <div class="col">
+              <div class="align-self-center col">
+                  <img class="img-fluid img-profile rounded-square mb-5" src="img/grad0.png" alt="">
               </div>
             </div>
         </div>
@@ -308,15 +309,47 @@
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
+          <h2 class="mb-5">School Projects</h2>
           <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
           <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
         </div>
       </section>
 
       <hr class="m-0">
+
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="design">
+          <div class="my-auto">
+            <h2 class="mb-5">Graphic Design</h2>
+            <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+            <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+          </div>
+        </section>
+  
+        <hr class="m-0">
+
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="tools">
+            <div class="my-auto">
+              <h2 class="mb-5">Tools</h2>
+              <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+              <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+            </div>
+      </section>
+    
+          <hr class="m-0">
+
+          <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="sites">
+              <div class="my-auto">
+                <h2 class="mb-5">Websites</h2>
+                <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+                <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+              </div>
+            </section>
+      
+            <hr class="m-0">
 
       <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
