--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="align-self-center col">
                     <img class="img-fluid img-profile rounded-square mb-5" src="img/grad0.png" alt="">
                 </div>
               <div class="col-4">
