--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <head>
       <!-- <link rel="icon" type="image/x-icon" href="img/favicon.ico"/> -->
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link rel="shortcut icon" href="img/thumb1.png" type="image/png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -250,6 +250,10 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+          <div class="subheading mb-3">Frameworks</div>
+          <div class="subheading mb-3">Software</div>
+
+          <p>Java C#</p>
           <!-- <ul class="list-inline dev-icons">
             <li class="list-inline-item">
               <i class="fab fa-html5"></i>
@@ -357,7 +361,26 @@
                   <p>empty</p>
                   <p class="mb-0">empty</p>
                 </div>
+
+                <div class="row">
+                    <div class="col">
+                        <img class="img-fluid img-profile rounded-square mb-5" src="img/jsun.png" alt="">
+                    </div>
+                    <div class="col">
+                      <p>Proud investor of Tron</p>
+                    </div>
+                  </div>
+
+
+
+
+
+
               </section>
+
+
+
+              
         
               <hr class="m-0">
 
