--- a/index.html
+++ b/index.html
@@ -316,8 +316,33 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
           <h2 class="mb-5">School Projects</h2>
-          <p>empty</p>
-          <p class="mb-0">empty</p>
+
+          <div class="row">
+              <div class ="col">
+                <div class="subheading mb-3">KidsPlay</div>
+              </div>
+              <div class ="col">
+                <div class="subheading mb-3">Rhythm Runner</div>
+              </div>
+            </div>
+          <div class="row">
+            <div class ="col"></div>
+            <div class ="col"></div>
+          </div>
+          <div class="row">
+            <div class ="col">
+              <p>View on GitHub</p>
+            </div>
+            <div class ="col">
+              <p>View on GitHub</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class ="col"></div>
+            <div class ="col">
+              <p>Play Game</p>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -362,14 +387,16 @@
                   <p class="mb-0">empty</p>
                 </div>
 
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col">
                         <img class="img-fluid img-profile rounded-square mb-5" src="img/jsun.png" alt="">
                     </div>
                     <div class="col">
                       <p>Proud investor of Tron</p>
                     </div>
-                  </div>
+                  </div> -->
+
+                  
 
 
 
@@ -377,7 +404,7 @@
 
 
               </section>
-
+              <img class="justin" src="img/Rushmore.png" alt="">
 
 
               
