--- a/index.html
+++ b/index.html
@@ -250,10 +250,13 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <div class="subheading mb-3">Frameworks</div>
+          <p>Java C JavaScript HTML5 CSS3 Prolog </p>
+          <div class="subheading mb-3">Frameworks and Engines</div>
+          <p>Ionic Bootstrap Node.js Unity</p>
           <div class="subheading mb-3">Software</div>
+          <p>Photoshop CS5 Word Excel</p>
 
-          <p>Java C#</p>
+          
           <!-- <ul class="list-inline dev-icons">
             <li class="list-inline-item">
               <i class="fab fa-html5"></i>
@@ -331,16 +334,16 @@
           </div>
           <div class="row">
             <div class ="col">
-              <p>View on GitHub</p>
+                <a href="/rhythmrunner.html" target="_blank">View on GitHUb</a>
             </div>
             <div class ="col">
-              <p>View on GitHub</p>
+                <a href="/rhythmrunner.html" target="_blank">View on GitHub</a>
             </div>
           </div>
           <div class="row">
             <div class ="col"></div>
             <div class ="col">
-              <p>Play Game</p>
+                <a href="/rhythmrunner.html" target="_blank">Play Game</a>
             </div>
           </div>
         </div>
@@ -352,8 +355,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="design">
           <div class="my-auto">
             <h2 class="mb-5">Graphic Design</h2>
-            <p>empty</p>
-            <p class="mb-0">empty</p>
+            <p>Coming Soon</p>
+            <p class="mb-0">Coming Soon</p>
           </div>
         </section>
   
@@ -404,7 +407,7 @@
 
 
               </section>
-              
+
               <img class="justin" src="img/Rushmore.png" alt="">
 
 
