--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           <div class="row">
               <div class ="col">Python</div>
               <div class ="col">Tensorflow</div>
-              <div class ="col">Assembly</div>
+              <div class ="col">MySQL</div>
               <div class ="col">A.I.</div>
         
           </div>
