--- a/iterator.html
+++ b/iterator.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Paul Fussell</title>
+    <title>Image Link Iterator</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,11 +22,25 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/resume.css" rel="stylesheet">
+    <link href="css/tools.css" rel="stylesheet">
 
   </head>
 
   <body id="page-top">
+
+      <div class="container-fluid p-0">
+        <section class="resume-section p-3 p-lg-5 d-flex flex-column">
+
+          <!-- desktop -->
+
+          <div class="d-none d-lg-block">
+            Test
+          </div>
+          <!-- mobile -->
+          <div class="d-lg-none">
+          </div>
+        </section>
+    </div>
 
 
     <!-- Bootstrap core JavaScript -->
