--- a/index.html
+++ b/index.html
@@ -382,8 +382,11 @@
           <div class="d-lg-none">
 
               <div class="subheading mb-3">KidsPlay</div>
-              <iframe src="https://www.youtube.com/embed/FswtZN_zeek" width="560" height="315" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              <br>
+              <div class="row">
+                  <div class ="col">
+                    <iframe src="https://www.youtube.com/embed/FswtZN_zeek" width="100%" height="315" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div></div>
+                    <br>
               <a href="https://github.com/CSUN-Comp490/KidsPlay" target="_blank">View on GitHub</a>
               <br>
               <p> KidsPlay is a social networking application for iOS and Android designed to facilitate social interaction among children in communities,  as well as a tool that makes parenting easier. </p>
