--- a/iterator.html
+++ b/iterator.html
@@ -71,7 +71,7 @@
               <button onclick="myFunction()">Try it</button>
               <p id ="demo"></p>
 
-              
+              <input type="button" value="testing" onclick="pack()">
 
             </div>
 
