--- a/iterator.html
+++ b/iterator.html
@@ -102,7 +102,7 @@
 
 
     <!-- JSZip -->
-    <script src="vendor/jszip.min.js"></script>
+    <script src="vendor/jszip.js"></script>
 
     <!-- FileSaver -->
     <script src="/vendor/FileSaver.js"></script>
