--- a/iterator.html
+++ b/iterator.html
@@ -105,7 +105,7 @@
     <script src="vendor/jszip.js"></script>
 
     <!-- FileSaver -->
-    <script src="/vendor/FileSaver.js"></script>
+    <script src="vendor/FileSaver.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/iterator.js"></script>
