--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
             <div class="my-auto">
               <h2 class="mb-5">Tools</h2>
               <p>Wistia Downloader - Coming Soon</p>
-              <a href="/iterator.html" target="_blank">Image Link Iterator</a>
+              <a href="/iterator.html" target="_blank">Image Link Iterator [Incomplete/Not Functioning]</a>
 
             <!-- mobile -->
             <div class="d-lg-none">
