--- a/iterator.html
+++ b/iterator.html
@@ -36,6 +36,7 @@
           <div class="d-none d-lg-block">
            
               <h2 class="mb-5">Image Link Iterator</h2>
+              <p>work in progress [do not use]</p>
 
 
             <div class ="toolbody">
